[ui] yet another z-index fix (#2248)

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -144,9 +144,6 @@ textarea.form-control {
 
 
 /* jquery ui */
-.ui-datepicker {
-	z-index: 100 !important;
-}
 
 .ui-datepicker .ui-datepicker-header {
 	border-radius: 0px !important;
@@ -286,37 +283,6 @@ textarea.form-control {
 		padding: 6px 10px 8px;
 	}
 }
-
-// .form-page {
-// 	.form-group {
-// 		margin: 20px 0px;
-// 	}
-//
-// 	input.form-control, select.form-control {
-// 		position: relative;
-// 		box-shadow: none;
-// 		border: none;
-// 		padding: 0px;
-// 		border-bottom: 1px solid transparent;
-// 		border-radius: 0;
-// 		background-color: inherit;
-// 		font-size: 16px;
-// 	}
-// 	input.form-control:focus, select.form-control:focus {
-// 		box-shadow: none;
-// 		border-color: @text-color;
-// 	}
-//
-// 	.control-label {
-// 		margin-bottom: 3px;
-// 	}
-//
-// 	.frappe-control:not([data-fieldtype*="Text"]) {
-// 		.control-value {
-// 			font-size: 16px;
-// 		}
-// 	}
-// }
 
 .link-field.ui-front {
 	z-index: inherit;
